--- a/locales/Polish.json
+++ b/locales/Polish.json
@@ -75,6 +75,19 @@
 			},
 			"subcommands": "Subkomenda"
 		},
+		"language": {
+			"description": "Ustaw język dla bota",
+			"invalid_language": "Podaj prawidłowy język. Przykład: `EnglishUS` dla języka angielskiego (Stany Zjednoczone)\n\nLista obsługiwanych języków znajduje się [tutaj](https://discord.com/developers/docs/reference#locales)\n\n**Dostępne języki:**\n{languages}",
+			"already_set": "Język bota jest już ustawiony na `{language}`.",
+			"not_set": "Język bota nie jest jeszcze ustawiony.",
+			"set": "`✅` | Język bota został pomyślnie ustawiony na `{language}`.",
+			"reset": "`✅` | Język bota został pomyślnie zresetowany do domyślnego.",
+			"options": {
+				"set": "Ustaw język dla bota",
+				"language": "Język, który chcesz ustawić",
+				"reset": "Zmień język z powrotem na domyślny"
+			}
+		},
 		"prefix": {
 			"description": "Pokazuje lub ustawia prefiks bota",
 			"errors": {
@@ -94,19 +107,19 @@
 		"setup": {
 			"description": "Konfiguruje bota",
 			"errors": {
-				"channel_exists": "Kanał żądanań utworu już istnieje.",
-				"channel_not_exists": "Kanał żądanań utworu nie istnieje.",
-				"channel_delete_fail": "Kanał żądanań utworu został usunięty. Jeśli kanał nie zostanie usunięty samoistnie, usuń go samodzielnie."
+				"channel_exists": "Kanał żądań utworu już istnieje.",
+				"channel_not_exists": "Kanał żądań utworu nie istnieje.",
+				"channel_delete_fail": "Kanał żądań utworu został usunięty. Jeśli kanał nie zostanie usunięty samoistnie, usuń go samodzielnie."
 			},
 			"messages": {
-				"channel_created": "Kanał żądanań utworu został utworzony i jest nim <#{channelId}>.",
-				"channel_deleted": "Kanał żądanań utworu został pomyślnie usunięty.",
-				"channel_info": "Kanałem żądanań utworu jest <#{channelId}>."
+				"channel_created": "Kanał żądań utworu został utworzony i jest nim <#{channelId}>.",
+				"channel_deleted": "Kanał żądań utworu został pomyślnie usunięty.",
+				"channel_info": "Kanałem żądań utworu jest <#{channelId}>."
 			},
 			"options": {
-				"create": "Tworzy kanał żądanań utworu",
-				"delete": "Usuwa kanał żądanań utworu",
-				"info": "Pokazuje kanał żądanań utworu"
+				"create": "Tworzy kanał żądań utworu",
+				"delete": "Usuwa kanał żądań utworu",
+				"info": "Pokazuje kanał żądań utworu"
 			}
 		},
 		"8d": {
@@ -481,19 +494,6 @@
 				"playlist_stolen": "Pomyślnie skradziono playlistę `{playlist}` od {user}.",
 				"error_occurred": "Wystąpił błąd podczas kradzieży playlisty."
 			}
-		},
-		"language": {
-			"description": "Ustaw język dla bota",
-			"invalid_language": "Podaj prawidłowy język. Przykład: `EnglishUS` dla języka angielskiego (Stany Zjednoczone)\n\nLista obsługiwanych języków znajduje się [tutaj](https://discord.com/developers/docs/reference#locales)\n\n**Dostępne języki:**\n{languages}",
-			"already_set": "Język bota jest już ustawiony na `{language}`.",
-			"not_set": "Język bota nie jest jeszcze ustawiony.",
-			"set": "`✅` | Język bota został pomyślnie ustawiony na `{language}`.",
-			"reset": "`✅` | Język bota został zresetowany do domyślnego.",
-			"options": {
-				"set": "Ustaw język dla bota",
-				"language": "Język, który chcesz ustawić",
-				"reset": "Zmień język z powrotem na domyślny"
-			}
 		}
 	},
 	"buttons": {
@@ -575,29 +575,29 @@
 			"different_voice_channel_queue": "Aby dodawać utwory do kolejki, musisz być połączony z <#{channel}.>"
 		},
 		"setupButton": {
-			"no_voice_channel_button": "Aby użyć tego przycisku, musisz być połączony z kanałem głosowym",
-			"different_voice_channel_button": "Aby używać tych przycisków, musisz być połączony z {channel}",
+			"no_voice_channel_button": "Aby użyć tego przycisku, musisz być połączony z kanałem głosowym.",
+			"different_voice_channel_button": "Aby używać tych przycisków, musisz być połączony z {channel}.",
 			"now_playing": "Teraz odtwarzany",
 			"live": "NA ŻYWO",
 			"requested_by": "Żądany przez {requester}",
 			"no_dj_permission": "Musisz mieć rolę DJ, aby użyć tej komendy.",
-			"volume_set": "Głośność utoru została ustawiona na {vol}%",
+			"volume_set": "Głośność utoru została ustawiona na {vol}%.",
 			"volume_footer": "Głośność: {vol}%",
 			"paused": "Wstrzymano",
 			"resumed": "Wznowiono",
-			"pause_resume": "{name} muzykę.",
+			"pause_resume": "{name} muzykę",
 			"pause_resume_footer": "{name} przez {displayName}",
 			"no_music_to_skip": "Nie ma muzyki, którą można by pominąć.",
 			"skipped": "Pominięto muzykę.",
 			"skipped_footer": "Pominięty przez {displayName}",
 			"stopped": "Zatrzymano muzykę.",
 			"stopped_footer": "Zatrzymany przez {displayName}",
-			"nothing_playing": "Nic nie jest teraz odtwarzane",
+			"nothing_playing": "Obecnie nic nie jest odtwarzane.",
 			"loop_set": "Zapętlenie ustawione na {loop}.",
 			"loop_footer": "Zapętlenie ustawione na {loop} przez {displayName}",
 			"shuffled": "Potasowano kolejkę.",
 			"no_previous_track": "Nie ma żadnego poprzedniego utworu.",
-			"playing_previous": "Odtwarzanie poprzedniego utworu.",
+			"playing_previous": "Odtwarzanie poprzedniego utworu",
 			"previous_footer": "Utwór ostatnio odtwarzany przez {displayName}",
 			"rewind_limit": "Nie można cofnąć muzyki o więcej niż długość utworu.",
 			"rewinded": "Cofnięto muzykę.",
@@ -608,8 +608,8 @@
 			"button_not_available": "Ten przycisk jest niedostępny."
 		}
 	},
-	"Evaluate code": "Evaluate code",
-	"Leave a guild": "Leave a guild",
-	"List all guilds the bot is in": "List all guilds the bot is in",
-	"Restart the bot": "Restart the bot"
+	"Evaluate code": "Ocena kodu",
+	"Leave a guild": "Opusć serwer",
+	"List all guilds the bot is in": "Lista wszystkich serwerów, w których jest bot",
+	"Restart the bot": "Uruchom ponownie bota"
 }
