--- a/locales/Polish.json
+++ b/locales/Polish.json
@@ -530,6 +530,17 @@
 			"looping_by": "Zapętlony przez {user}",
 			"looping_queue_by": "Zapętlona kolejka przez {user}",
 			"looping_off_by": "Zapętlenie wyłączone przez {user}"
+		},
+		"setupStart": {
+			"now_playing": "Now Playing",
+			"description": "[{title}]({uri}) by {author} • `[${length}]` - Requested by {requester}",
+			"error_searching": "There was an error while searching.",
+			"no_results": "There were no results found.",
+			"nothing_playing": "Nothing playing right now.",
+			"queue_too_long": "The queue is too long. The maximum length is {maxQueueSize} songs.",
+			"playlist_too_long": "The playlist is too long. The maximum length is {maxPlaylistSize} songs.",
+			"added_to_queue": "Added [{title}]({uri}) to the queue.",
+			"added_playlist_to_queue": "Added [{length}] songs from the playlist to the queue."
 		}
 	},
 	"event": {
