--- a/locales/Russian.json
+++ b/locales/Russian.json
@@ -240,7 +240,7 @@
 		},
 		"grab": {
 			"description": "Забирает текущую воспроизводимую песню в ваш DM",
-			"content": "**Длительность:** {length}\n**Запрошено:** {requester}\n**Ссылка:** [Нажмите сюда]({uri})",
+			"content": "**Длительность:** {length}\n**Запрошено:** <@{requester}>\n**Ссылка:** [Нажмите сюда]({uri})",
 			"check_dm": "Проверьте свой DM.",
 			"dm_failed": "Я не смог отправить вам DM."
 		},
@@ -264,7 +264,7 @@
 		"nowplaying": {
 			"description": "Показывает текущую воспроизводимую песню",
 			"now_playing": "Сейчас играет",
-			"track_info": "[{title}]({uri}) - Запрошено: {requester}\n\n`{bar}`"
+			"track_info": "[{title}]({uri}) - Запрошено: <@{requester}>\n\n`{bar}`"
 		},
 		"pause": {
 			"description": "Ставит на паузу текущую песню",
@@ -533,7 +533,7 @@
 		},
 		"setupStart": {
 			"now_playing": "Now Playing",
-			"description": "[{title}]({uri}) by {author} • `[${length}]` - Requested by <@{requester}>",
+			"description": "[{title}]({uri}) by {author} • `[{length}]` - Requested by <@{requester}>",
 			"error_searching": "There was an error while searching.",
 			"no_results": "There were no results found.",
 			"nothing_playing": "Nothing playing right now.",
@@ -590,7 +590,7 @@
 			"different_voice_channel_button": "Вы не подключены к {channel}, чтобы использовать эти кнопки.",
 			"now_playing": "Сейчас играет",
 			"live": "В ПРЯМОМ ЭФИРЕ",
-			"requested_by": "Запрошено {requester}",
+			"requested_by": "Запрошено <@{requester}>",
 			"no_dj_permission": "Вам нужна роль DJ, чтобы использовать эту команду.",
 			"volume_set": "Громкость установлена на {vol}%",
 			"volume_footer": "Громкость: {vol}%",
