--- a/locales/SpanishES.json
+++ b/locales/SpanishES.json
@@ -616,7 +616,8 @@
 			"forward_limit": "No puedes avanzar la música más de la duración de la canción.",
 			"forwarded": "Se ha adelantado la música.",
 			"forward_footer": "Adelantado por {displayName}",
-			"button_not_available": "Este botón no está disponible."
+			"button_not_available": "Este botón no está disponible.",
+			"no_music_playing": "No se está reproduciendo nada ahora mismo."
 		}
 	},
 	"Evaluate code": "Evaluate code",
